u for anti- consistency

--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -65,7 +65,7 @@
 				<section aria-labelledby="mission">
 					<h3 id="mission">Our Mission</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. The project anchors itself on the idea that teaching must be taken seriously as a critical practice, as a site of disciplinary formation and transformation, and as an integral part of antiracist, anti-colonial, and decolonial organizing and activism.</p>
+					<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. The project anchors itself on the idea that teaching must be taken seriously as a critical practice, as a site of disciplinary formation and transformation, and as an integral part of antiracist, anticolonial, and decolonial organizing and activism.</p>
 
 					<p>Through its practices, the project works in solidarity with the critical interventions made by “<a aria-label="External Link" href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). The project also advocates for engaging scholarship from a wide array of fields, including Black, African, African American, Indigenous, Native American, Asian, Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies.</p>
 
