--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -128,7 +128,7 @@
 							<span class="annotation">Providing religious, political, and social contexts, this relatively short article is a comprehensive overview of Ethiopianism’s “three broad strands: in African-American diasporic experience, West African manifestations and southern African genre. In all incarnations, it fuelled black nationalism” (581).</span></p>
 
 						<p>Wittenberg, Hermann. “<a aria-label="External Link" href="https://doi.org/10.1080/00138398.2011.588374">Race, Resistance and Translation: The Case of John Buchan’s <span class="word"><em>UPrester</em></span> John</a>.” <em>English Studies in Africa</em>, vol. 54, no. 1, 2001, pp. 1–10.<br/>
-							<span class="annotation">A popular school textbook in Britain and the Commonwealth, <em>Prester John</em> was read by both the colonizer and the colonized. Wittenberg explains that while the novel “[fit] well into a cultural milieu shaped by Rider Haggard, <em>Treasure Island</em>, and the Boy Scouts,” it has also been read as an anti-colonial novel (6). His main focus is the translation of <em>Prester John</em> into Zulu in 1958 as “a complex form of negotiation [between] resistance [and] collaboration” (6).</span></p>
+							<span class="annotation">A popular school textbook in Britain and the Commonwealth, <em>Prester John</em> was read by both the colonizer and the colonized. Wittenberg explains that while the novel “[fit] well into a cultural milieu shaped by Rider Haggard, <em>Treasure Island</em>, and the Boy Scouts,” it has also been read as an anticolonial novel (6). His main focus is the translation of <em>Prester John</em> into Zulu in 1958 as “a complex form of negotiation [between] resistance [and] collaboration” (6).</span></p>
 					</section>
 				</section>
 
