add cf-eds redirect

--- a/404.html
+++ b/404.html
@@ -26,6 +26,7 @@
 				"/html/about/call_for_assessments.html": "/html/assessments/call_for_assessments.html",
 				"/html/about/call_for_syllabi_and_syllabus_clusters.html": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
 				"/html/about/call_for_syllabus_clusters_2022": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
+				"/html/about/call_for_assistant_editors_2022.html": "/html/about/call_for_assistant_editors.html",
 			};
 			const currentPath = window.location.pathname;
 			if (redirects[currentPath]) {
