--- a/html/about/call_for_assistant_editors.html
+++ b/html/about/call_for_assistant_editors.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="editors">
-				<h2 id="editors">Call for Assistant Editors (2022)</h2>
+				<h2 id="editors">Call for Assistant Editors</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/about/uvc_0045-1800px.jpg" srcset="/img/about/uvc_0045-1800px.jpg 1800w, /img/about/uvc_0045-1650px.jpg 1650w, /img/about/uvc_0045-1500px.jpg 1500w, /img/about/uvc_0045-1350px.jpg 1350w, /img/about/uvc_0045-1200px.jpg 1200w, /img/about/uvc_0045-1050px.jpg 1050w, /img/about/uvc_0045-900px.jpg 900w, /img/about/uvc_0045-750px.jpg 750w, /img/about/uvc_0045-600px.jpg 600w, /img/about/uvc_0045-450px.jpg 450w, /img/about/uvc_0045-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
