--- a/html/about/statement_on_generative_ai.html
+++ b/html/about/statement_on_generative_ai.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Statement on Generative AI | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Announces a call for assistant editors (2022) who will create and prepare content for online publication, with a particular focus on our Zoomcast series."/>
+    <title>Statement on Using Generative AI | Undisciplining the Victorian Classroom</title>
+		<meta name="description" content="Sets out our policy on using generative artificial intelligence (AI) in submissions made to our site, including citation, documentation, and intentionality."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -37,40 +37,42 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="editors">
-				<h2 id="editors">Call for Assistant Editors (2022)</h2>
+				<h2 id="editors">Statement on Using Generative AI</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0045-1800px.jpg" srcset="/img/about/uvc_0045-1800px.jpg 1800w, /img/about/uvc_0045-1650px.jpg 1650w, /img/about/uvc_0045-1500px.jpg 1500w, /img/about/uvc_0045-1350px.jpg 1350w, /img/about/uvc_0045-1200px.jpg 1200w, /img/about/uvc_0045-1050px.jpg 1050w, /img/about/uvc_0045-900px.jpg 900w, /img/about/uvc_0045-750px.jpg 750w, /img/about/uvc_0045-600px.jpg 600w, /img/about/uvc_0045-450px.jpg 450w, /img/about/uvc_0045-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/>
+					<img src="/img/about/uvc_00xx-1800px.jpg" srcset="/img/about/uvc_00xx-1800px.jpg 1800w, /img/about/uvc_00xx-1650px.jpg 1650w, /img/about/uvc_00xx-1500px.jpg 1500w, /img/about/uvc_00xx-1350px.jpg 1350w, /img/about/uvc_00xx-1200px.jpg 1200w, /img/about/uvc_00xx-1050px.jpg 1050w, /img/about/uvc_00xx-900px.jpg 900w, /img/about/uvc_00xx-750px.jpg 750w, /img/about/uvc_00xx-600px.jpg 600w, /img/about/uvc_00xx-450px.jpg 450w, /img/about/uvc_00xx-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#solicitation">Full Solicitation</a></li>
+						<li><a href="#statement">Full Statement</a></li>
+						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page Citation (MLA)</a></li>
 					</ol>
 				</section>
 
-				<section aria-labelledby="solicitation">
-					<h3 id="solicitation">Full Solicitation</h3>
+				<section aria-labelledby="statement">
+					<h3 id="statement">Full Statement</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> (UVC) is seeking applications to assemble a team of 3-4 Assistant Editors. The primary responsibilities of the team will be to create and prepare content for online publication, with a particular focus on our <a href="/html/zoomcasts.html">Zoomcast</a> series. This work will include developing new topic clusters, hosting conversations, and seeking out potential guest hosts. Our goal is to have the editorial team post at least one new Zoomcast each month (collectively, not per editor). There will be additional opportunities to work on <a href="/html/syllabi.html">syllabi</a> and/or <a href="/html/lesson_plans.html">lesson plan</a> clusters as well. We expect a commitment of at least one calendar year.</p>
+					
+				</section>
 
-					<p>While UVC remains an all-volunteer effort at this point and cannot offer monetary compensation, the four <a href="/html/about/founding_developers.html">Founding Developers</a> are dedicated to supporting the people in this position in other ways. We can offer mentorship around publication, research, and navigating the job market. We can also offer training in coding and website building and are happy to help make connections with our professional networks within and beyond the academy. We hope this opportunity will also be a chance for graduate students and early career scholars, especially, to develop skills that could transfer to work in the public humanities in its many forms.</p>
+				<section aria-labelledby="works-cited">
+					<h3 id="works-cited">Works Cited</h3>
 
-					<p>To apply, please send your CV and a brief statement of your interest in UVC and this position to Ryan Fong (<a aria-label="External Client" href="mailto:rfong@kzoo.edu">rfong@kzoo.edu</a>). Feel free to highlight any relevant experience. We will accept applications on a rolling basis, but priority will be given to those who submit by August 29.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/22380/blanket">Blanket</a>. [1880-1899]. Art Institute of Chicago, Chicago, 1964.1135. Gift of Mrs. William Bross Lloyd. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a> and <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Cluster (Open)</a> pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+					<p></p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>“Call for Assistant Editors.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/call_for_assistant_editors_2022.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_assistant_editors.html</a>.</p>
+					<p>“Statement on Using Generative AI.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/statement_on_using_generative_ai.html" class="cite-link">https://undiscipliningvc.org/html/about/statement_on_using_generative_ai</a>.</p>
 				</section>
 			</main>
 			
