--- a/html/about/statement_on_using_generative_ai.html
+++ b/html/about/statement_on_using_generative_ai.html
@@ -43,6 +43,16 @@
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
+				<section class="specs" aria-labelledby="statement-specs">
+					<h3 id="statement-specs">Statement Production Details</h3>
+
+					<div class="specs-container">
+						<p><strong>Contributors:</strong> Ava Bindas, Pearl Chaozon Bauer, Kristen Layne Figgins, H Fogarty, Ryan Fong, Cherrie Kwok, Adrian S. Wisnicki (lead) <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+
+						<p><strong>Publication Date:</strong> 2023</p>
+					</div>
+				</section>
+
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
@@ -72,7 +82,7 @@
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>“Statement on Using Generative AI.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/statement_on_using_generative_ai.html" class="cite-link">https://undiscipliningvc.org/html/about/statement_on_using_generative_ai</a>.</p>
+					<p>Ava Bindas, Pearl Chaozon Bauer, Kristen Layne Figgins, H Fogarty, Ryan Fong, Cherrie Kwok, Adrian S. Wisnicki (lead). “Statement on Using Generative AI.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/about/statement_on_using_generative_ai.html" class="cite-link">https://undiscipliningvc.org/html/about/statement_on_using_generative_ai</a>.</p>
 				</section>
 			</main>
 			
