carry over Ava's changes to existing asst ed page

--- a/html/about/call_for_assistant_editors.html
+++ b/html/about/call_for_assistant_editors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Call for Assistant Editors | Undisciplining the Victorian Classroom</title>
+    <title>Call for Assistant Editor | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Announces a call for assistant editors (2022) who will create and prepare content for online publication, with a particular focus on our Zoomcast series."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="editors">
-				<h2 id="editors">Call for Assistant Editors</h2>
+				<h2 id="editors">Call for Social Media Assistant Editor</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/about/uvc_0045-1800px.jpg" srcset="/img/about/uvc_0045-1800px.jpg 1800w, /img/about/uvc_0045-1650px.jpg 1650w, /img/about/uvc_0045-1500px.jpg 1500w, /img/about/uvc_0045-1350px.jpg 1350w, /img/about/uvc_0045-1200px.jpg 1200w, /img/about/uvc_0045-1050px.jpg 1050w, /img/about/uvc_0045-900px.jpg 900w, /img/about/uvc_0045-750px.jpg 750w, /img/about/uvc_0045-600px.jpg 600w, /img/about/uvc_0045-450px.jpg 450w, /img/about/uvc_0045-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -55,11 +55,11 @@
 				<section aria-labelledby="solicitation">
 					<h3 id="solicitation">Full Solicitation</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> (UVC) is seeking applications to assemble a team of 3-4 Assistant Editors. The primary responsibilities of the team will be to create and prepare content for online publication, with a particular focus on our <a href="/html/zoomcasts.html">Zoomcast</a> series. This work will include developing new topic clusters, hosting conversations, and seeking out potential guest hosts. Our goal is to have the editorial team post at least one new Zoomcast each month (collectively, not per editor). There will be additional opportunities to work on <a href="/html/syllabi.html">syllabi</a> and/or <a href="/html/lesson_plans.html">lesson plan</a> clusters as well. We expect a commitment of at least one calendar year.</p>
+					<p><a href="https://undiscipliningvc.org/index.html"><em>Undisciplining the Victorian Classroom</em></a> (UVC) is seeking applications for a Social Media Assistant Editor to handle the promotion and dissemination of UVC materials and activities. The primary responsibilities will be 1) developing social media strategies, activities, and posts (Twitter, Discord, Twitch, etc.), and 2) gathering material for and writing the quarterly UVC newsletter. There will also be an opportunity to explore the use of AI technologies to support this work We expect a commitment of at least one calendar year. Pending good progress, the position is also renewable for a second year at which time the editor would be invited to become a permanent member of the UVC staff.</p>
 
-					<p>While UVC remains an all-volunteer effort at this point and cannot offer monetary compensation, the four <a href="/html/about/founding_developers.html">Founding Developers</a> are dedicated to supporting the people in this position in other ways. We can offer mentorship around publication, research, and navigating the job market. We can also offer training in coding and website building and are happy to help make connections with our professional networks within and beyond the academy. We hope this opportunity will also be a chance for graduate students and early career scholars, especially, to develop skills that could transfer to work in the public humanities in its many forms.</p>
+					<p>While UVC remains an all-volunteer effort at this point and cannot offer monetary compensation, the four <a href="/html/about/founding_developers.html">Founding Developers</a> are dedicated to supporting the people in this position in other ways. We can offer mentorship around publication, research, and navigating the job market. We can also offer training in coding and website building and are happy to help make connections with our professional networks within and beyond the academy. We hope this opportunity will also be a chance for graduate students and early career scholars, especially, to develop skills that could transfer to work in digital media studies, digital humanities, and the public humanities. The Assistant Editor will also become part of a very supportive and caring academic community.</p>
 
-					<p>To apply, please send your CV and a brief statement of your interest in UVC and this position to Ryan Fong (<a aria-label="External Client" href="mailto:rfong@kzoo.edu">rfong@kzoo.edu</a>). Feel free to highlight any relevant experience. We will accept applications on a rolling basis, but priority will be given to those who submit by August 29.</p>
+					<p>To apply, please send your CV and a brief statement of your interest in UVC and this position (a few paragraphs; no more than one page) to both Adrian S. Wisnicki (<a class="mail" href="mailto:awisnicki@yahoo.com"><span>awisnicki@yahoo.com</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>) and Ava Bindas (<a class="mail" href="mailto:akbindas@ucdavis.edu.com"><span>akbindas@ucdavis.edu</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>). Feel free to highlight any relevant experience as well as interest. We will accept applications on a rolling basis, but priority will be given to those who submit by October 1st.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
@@ -70,7 +70,7 @@
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>“Call for Assistant Editors.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/call_for_assistant_editors_2022.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_assistant_editors.html</a>.</p>
+					<p>“Call for Social Media Assistant Editor.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/about/call_for_assistant_editors.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_assistant_editors.html</a>.</p>
 				</section>
 			</main>
 			
