--- a/html/about.html
+++ b/html/about.html
@@ -45,6 +45,11 @@
 					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. At present, the section introduces the project's founding developers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gathers in one place the various primary and secondary materials cited throughout the site.</p>
 				</section>
 
+				<section aria-labelledby="call-for-editors">
+					<h3 id="call-for-editors">Call for Social Media Assistant Editor</h3>
+					<div><a href="/html/about/call_for_assistant_editors.html"><img loading="lazy" src="/img/about/tiles/uvc_0045-1136px.jpg" srcset="/img/about/tiles/uvc_0045-1136px.jpg 1136w, /img/about/tiles/uvc_0045-930px.jpg 930w, /img/about/tiles/uvc_0045-814px.jpg 814w, /img/about/tiles/uvc_0045-662px.jpg 662w, /img/about/tiles/uvc_0045-568px.jpg 568w, /img/about/tiles/uvc_0045-530px.jpg 530w, /img/about/tiles/uvc_0045-465px.jpg 465w, /img/about/tiles/uvc_0045-407px.jpg 407w, /img/about/tiles/uvc_0045-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/></a></div>
+				</section>
+
 				<section aria-labelledby="values">
 					<h3 id="values">Values and Practices</h3>
 					<div><a href="/html/about/values_practices.html"><img loading="lazy" src="/img/about/tiles/uvc_0024-1324px.jpg" srcset="/img/about/tiles/uvc_0024-1324px.jpg 1324w, /img/about/tiles/uvc_0024-1136px.jpg 1136w, /img/about/tiles/uvc_0024-930px.jpg 930w, /img/about/tiles/uvc_0024-814px.jpg 814w, /img/about/tiles/uvc_0024-662px.jpg 662w, /img/about/tiles/uvc_0024-568px.jpg 568w, /img/about/tiles/uvc_0024-530px.jpg 530w, /img/about/tiles/uvc_0024-465px.jpg 465w, /img/about/tiles/uvc_0024-407px.jpg 407w, /img/about/tiles/uvc_0024-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers."/></a></div>
@@ -74,11 +79,6 @@
 					<h3 id="bibliography">Bibliography</h3>
 					<div><a href="/html/about/bibliography.html"><img loading="lazy" src="/img/about/tiles/uvc_0022-1136px.jpg" srcset="/img/about/tiles/uvc_0022-1136px.jpg 1136w, /img/about/tiles/uvc_0022-930px.jpg 930w, /img/about/tiles/uvc_0022-814px.jpg 814w, /img/about/tiles/uvc_0022-662px.jpg 662w, /img/about/tiles/uvc_0022-568px.jpg 568w, /img/about/tiles/uvc_0022-530px.jpg 530w, /img/about/tiles/uvc_0022-465px.jpg 465w, /img/about/tiles/uvc_0022-407px.jpg 407w, /img/about/tiles/uvc_0022-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue."/></a></div>
 				</section>
-
-				<!-- <section aria-labelledby="assistant-editors-2022">
-					<h3 id="assistant-editors-2022">Call for Assistant Editors (2022)</h3>
-					<div><a href="/html/about/call_for_assistant_editors_2022.html"><img loading="lazy" src="/img/about/tiles/uvc_0045-1136px.jpg" srcset="/img/about/tiles/uvc_0045-1136px.jpg 1136w, /img/about/tiles/uvc_0045-930px.jpg 930w, /img/about/tiles/uvc_0045-814px.jpg 814w, /img/about/tiles/uvc_0045-662px.jpg 662w, /img/about/tiles/uvc_0045-568px.jpg 568w, /img/about/tiles/uvc_0045-530px.jpg 530w, /img/about/tiles/uvc_0045-465px.jpg 465w, /img/about/tiles/uvc_0045-407px.jpg 407w, /img/about/tiles/uvc_0045-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/></a></div>
-				</section> -->
 			</main>
 			
 			<div data-include="footer"></div>
