--- a/sitemap.html
+++ b/sitemap.html
@@ -165,13 +165,13 @@
 
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 							<ol>
+								<li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor</a></li>
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
 								<li><a href="/html/about/associate_editors.html">Associate Editors</a></li>
 								<li><a href="/html/about/assistant_editors.html">Assistant Editors</a></li>
 								<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
 								<li><a href="/html/about/bibliography.html">Bibliography</a></li>
-								<!-- <li><a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editors (2022)</a></li> -->
 							</ol>
 						</li>
 					
