add statement on ai to sitemap

--- a/sitemap.html
+++ b/sitemap.html
@@ -166,6 +166,7 @@
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 							<ol>
 								<li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor</a></li>
+								<li><a href="/html/about/statement_on_using_generative_ai.html">Statement on Using Generative AI</a></li>
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
 								<li><a href="/html/about/associate_editors.html">Associate Editors</a></li>
