--- a/sitemap.html
+++ b/sitemap.html
@@ -147,7 +147,7 @@
 
 						<li role="none"><a href="/html/assessments.html"><span id="syllabi">Assessments</span></a>
 							<ol>
-								<li><a href="/html/assessments/call_for_assessments.html">Call for Assessments (2023)</a></li>
+								<!-- <li><a href="/html/assessments/call_for_assessments.html">Call for Assessments (2023)</a></li> -->
 								<li>Students in the Archives
 									<ol>
 										<li><a href="/html/assessments/archives_of_empire.html">Archives of Empire</a></li>
@@ -165,7 +165,7 @@
 
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 							<ol>
-								<li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor</a></li>
+								<li><a href="/html/about/call_for_assistant_editors.html">Call for Social Media Assistant Editor (2023)</a></li>
 								<li><a href="/html/about/statement_on_using_generative_ai.html">Statement on Using Generative AI</a></li>
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
