--- a/html/assessments.html
+++ b/html/assessments.html
@@ -45,10 +45,10 @@
 					<p>These assessments use innovative pedagogical approaches that are antiracist, antiableist and anticolonialist in content and/or form. While they feature a Victorian-era component, they can be adapted for a variety of teaching contexts. We offer these assessments in an effort to help us reimagine a Victorian Studies that empowers students through different forms of critical and creative engagement.</p>
 				</section>
 
-				<section aria-labelledby="assessments">
+				<!-- <section aria-labelledby="assessments">
 					<h3 id="assessments">Call for Assessments (2023)</h3>
 					<div><a href="/html/assessments/call_for_assessments.html"><img loading="lazy" src="/img/assessments/tiles/uvc_0040-1136px.jpg" srcset="/img/assessments/tiles/uvc_0040-1136px.jpg 1136w, /img/assessments/tiles/uvc_0040-930px.jpg 930w, /img/assessments/tiles/uvc_0040-814px.jpg 814w, /img/assessments/tiles/uvc_0040-662px.jpg 662w, /img/assessments/tiles/uvc_0040-568px.jpg 568w, /img/assessments/tiles/uvc_0040-530px.jpg 530w, /img/assessments/tiles/uvc_0040-465px.jpg 465w, /img/assessments/tiles/uvc_0040-407px.jpg 407w, /img/assessments/tiles/uvc_0040-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/></a></div>
-				</section>
+				</section> -->
 
 				<section aria-labelledby="students-in-the-archives-1">
 					<h3 id="students-in-the-archives-1">Students in the Archives</h3>
