--- a/html/about/call_for_assistant_editors.html
+++ b/html/about/call_for_assistant_editors.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Call for Social Media Assistant Editor (2023) | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Announces a call for a Social Media Assistant Editor who will 1) develop social media strategies, activities, and posts; and 2) gather material for and write the quarterly UVC newsletter."/>
+		<meta name="description" content="Announces a call for a Social Media Assistant Editor (2023) who will 1) develop social media strategies, activities, and posts; and 2) write the quarterly UVC newsletter."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
