--- a/html/lesson_plans/call_for_lesson_plan_participants.html
+++ b/html/lesson_plans/call_for_lesson_plan_participants.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Call for Particpants: Lesson Plans on Female POC Folklorists (2023) | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Announces a call for participants (2023) to create a cluster of lesson plans featuring and centering Female POC Folklorists."/>
+    <title>Call for Participants: Lesson Plans on Female POC Folklorists (2023) | Undisciplining the Victorian Classroom</title>
+		<meta name="description" content="Announces a call for participants (2023) to contribute to a cluster of lesson plans featuring and centering female People of Color (POC) folklorists."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -57,26 +57,26 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> announces a call for participants to create lesson plans for a cluster that models how to teach students about women of color's contributions to folklore studies as folklorists, translators, and creators/co-creators of folklore criticism, collections, or archives. Anyone with relevant teaching or research interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
+					<p><em>Undisciplining the Victorian Classroom</em> (UVC) announces a call for participants to create lesson plans for a cluster that models how to teach students about women of color's contributions to folklore studies as folklorists, translators, and creators/co-creators of folklore criticism, collections, or archives. Anyone with relevant teaching or research interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
 
 					<p class="center">Submission Deadline:<strong> September 15, 2023</strong></p>
 
-					<p>Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri at <a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>.</p>
+					<p>Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri (<a aria-label="External Client"  href="mailto:iohri@bu.edu">iohri@bu.edu</a>).</p>
 			
 				<hr class="hrcalls"/>
 
 				<section aria-labelledby="solicitation">
 					<h3 id="solicitation">Full Solicitation</h3>
 
-					<p>UVC is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. UVC&rsquo;s site was launched in 2021 and publishes a variety of pedagogical materials, including peer-reviewed syllabi, peer-reviewed lesson plans, peer-reviewed assessments, and Zoomcasts (i.e., video interviews with scholars engaged in important antiracist classroom work). The site has been well-received by Victorianists and has been <a href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom/release/4">peer-reviewed</a> for <em>Reviews in Digital Humanities.</em></p>
+					<p>UVC is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. UVC&rsquo;s site was launched in 2021 and publishes a variety of pedagogical materials, including peer-reviewed syllabi, peer-reviewed lesson plans, peer-reviewed assessments, and Zoomcasts (i.e., video interviews with scholars engaged in important antiracist classroom work). The site has been well-received by Victorianists and has been <a aria-label="External Link" href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom/release/4">peer-reviewed</a> for <em>Reviews in Digital Humanities.</em></p>
 
 					<p>UVC is looking for participants to produce peer-reviewed lesson plans for a cluster about women of color's contributions to folklore studies during the long nineteenth and early twentieth centuries (1800-1940). These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We are seeking participants of any rank who can collaborate virtually to plan, create, and design lesson plans that instructors can adapt to their own teaching contexts. This work will be a collaborative, sustained, and rigorous effort to generate lesson plans that will be published on our website as open-access resources. </p>
 
 					<p>During this period, the first voices of colonized subjects often reached Western readers through folklore collections that white colonial administrators, folklorists, and amateurs compiled with the help of local coauthors/creators. The organizers are particularly interested in highlighting women of colors' achievements in this field and their work theorizing, transcribing, compiling, and adapting folktales. For this call, we invite participants who can create biographies, contextual materials, and suggested teaching activities about the following women: Jane Johnston Schoolcraft, Zitkala-Sa, Anna Liberata de Sousa, Emma Nakuina, Jovita Gonzalez, E. Pauline Johnson, and Charlotte Forten Grimk&eacute;. We also invite suggestions of other female folklorists, folklore collections, or archives that would be of interest for this cluster. </p>
 
-					<p>The deadline for submissions is September 15, 2023. Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri at <a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>. Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of previous <a aria-label="External Link" href="https://undiscipliningvc.org/html/lesson_plans.html">lesson plan clusters</a> and and individual lesson plans.</p>
+					<p>The deadline for submissions is September 15, 2023. Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri (<a aria-label="External Client"  href="mailto:iohri@bu.edu">iohri@bu.edu</a>). Visit the <em>Undisciplining the Victorian Classroom</em> site for <a href="/html/lesson_plans.html">examples</a> of previous lesson plan clusters and and individual lesson plans.</p>
 
-					<p>Questions about this Call for Participants and the Undisciplining the Victorian Classroom initiative should be directed to Ryan Fong (<a class="mail" href="mailto:Ryan.Fong@kzoo.edu"><span>Ryan.Fong@kzoo.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>) and Indu Ohri (<a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>).</p>
+					<p>Questions about this Call for Participants and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Ryan Fong (<a aria-label="External Client"  href="mailto:Ryan.Fong@kzoo.edu">)Ryan.Fong@kzoo.edu</a>) and Indu Ohri (<a aria-label="External Client"  href="mailto:iohri@bu.edu">iohri@bu.edu</a>).</p>
 
 					<p>To be placed on the UVC mailing list, kindly fill out this <a aria-label="External Link" href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google form</a>.</p>
 				</section>
@@ -89,7 +89,7 @@
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>“Call for Participants.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="html/lesson_plans/call_for_participants_POC_folklore.html" class="cite-link">html/lesson_plans/call_for_participants_POC_folklore.html</a>.</p>
+					<p>“Call for Participants: Lesson Plans on Female POC Folklorists (2023).” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="html/lesson_plans/call_for_lesson_plan_participants" class="cite-link">html/lesson_plans/call_for_lesson_plan_participants</a>.</p>
 				</section>
 			</main>
 			
