u sitemap for new lp call

--- a/sitemap.html
+++ b/sitemap.html
@@ -64,6 +64,7 @@
 
 						<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 							<ol>
+								<li><a href="/html/lesson_plans/call_for_lesson_plan_participants.html">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</a></li>
 								<li><a href="/html/lesson_plans/east_asia_transimperial_introduction.html">Transimperial Networks and East Asia</a>
 									<ol>
 										<li><a href="/html/lesson_plans/east_asia_psychoactive_revolution.html">Psychoactive Revolution and Transnational Networks</a></li>
