--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -45,6 +45,11 @@
 					<p>These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
+				<section aria-labelledby="call-for-lp-participants">
+					<h3 id="call-for-lp-participants">Call for Participants</h3>
+					<div><a href="/html/lesson_plans/call_for_lesson_plan_participants.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0075-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0075-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0075-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0075-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0075-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0075-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0075-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0075-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0075-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/><span>Lesson Plans on Female POC Folklorists (2023)</span></a></div>
+				</section>
+
 				<section aria-labelledby="east-asia-1">
 					<h3 id="east-asia-1">Transimperial Networks and East Asia</h3>
 					<div><a href="/html/lesson_plans/east_asia_transimperial_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0051-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0051-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0051-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0051-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0051-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0051-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0051-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0051-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0051-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands."/><span>Cluster Introduction</span></a></div>
