--- a/html/lesson_plans/call_for_lesson_plan_participants.html
+++ b/html/lesson_plans/call_for_lesson_plan_participants.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plans">
 				<h2 id="lesson-plans">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/assessments/uvc_0075-1170px.jpg" srcset="/img/assessments/uvc_0075-1170px.jpg 1170w, /img/assessments/uvc_0075-888px.jpg 888w, /img/assessments/uvc_0075-585x.jpg 585w, /img/assessments/uvc_0075-568px.jpg 568w, /img/assessments/uvc_0075-444px.jpg 444w, /img/assessments/uvc_0075-284px.jpg 284w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/>
+					<img src="/img/lesson_plans/uvc_0075-1800px.jpg" srcset="/img/lesson_plans/uvc_0075-1800px.jpg 1800w, /img/lesson_plans/uvc_0075-1650px.jpg 1650w, /img/lesson_plans/uvc_0075-1500px.jpg 1500w, /img/lesson_plans/uvc_0075-1350px.jpg 1350w, /img/lesson_plans/uvc_0075-1200px.jpg 1200w, /img/lesson_plans/uvc_0075-1050px.jpg 1050w, /img/lesson_plans/uvc_0075-900px.jpg 900w, /img/lesson_plans/uvc_0075-750px.jpg 750w, /img/lesson_plans/uvc_0075-600px.jpg 600w, /img/lesson_plans/uvc_0075-450px.jpg 450w, /img/lesson_plans/uvc_0075-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -59,7 +59,7 @@
 
 					<p><em>Undisciplining the Victorian Classroom</em> (UVC) announces a call for participants to create lesson plans for a cluster that models how to teach students about women of color's contributions to folklore studies as folklorists, translators, and creators/co-creators of folklore criticism, collections, or archives. Anyone with relevant teaching or research interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
 
-					<p class="center">Submission Deadline:<strong> September 15, 2023</strong></p>
+					<p class="center"><em>Submission Deadline:</em> <strong>September 15, 2023</strong></p>
 
 					<p>Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri (<a aria-label="External Client"  href="mailto:iohri@bu.edu">iohri@bu.edu</a>).</p>
 			
