--- a/html/lesson_plans/call_for_lesson_plan_participants.html
+++ b/html/lesson_plans/call_for_lesson_plan_participants.html
@@ -39,10 +39,9 @@
 			<main id="main" aria-labelledby="lesson-plans">
 				<h2 id="lesson-plans">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/lesson_plans/uvc_0075-1800px.jpg" srcset="/img/lesson_plans/uvc_0075-1800px.jpg 1800w, /img/lesson_plans/uvc_0075-1650px.jpg 1650w, /img/lesson_plans/uvc_0075-1500px.jpg 1500w, /img/lesson_plans/uvc_0075-1350px.jpg 1350w, /img/lesson_plans/uvc_0075-1200px.jpg 1200w, /img/lesson_plans/uvc_0075-1050px.jpg 1050w, /img/lesson_plans/uvc_0075-900px.jpg 900w, /img/lesson_plans/uvc_0075-750px.jpg 750w, /img/lesson_plans/uvc_0075-600px.jpg 600w, /img/lesson_plans/uvc_0075-450px.jpg 450w, /img/lesson_plans/uvc_0075-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/>
+					<img src="/img/lesson_plans/uvc_0071-1800px.jpg" srcset="/img/lesson_plans/uvc_0071-1800px.jpg 1800w, /img/lesson_plans/uvc_0071-1650px.jpg 1650w, /img/lesson_plans/uvc_0071-1500px.jpg 1500w, /img/lesson_plans/uvc_0071-1350px.jpg 1350w, /img/lesson_plans/uvc_0071-1200px.jpg 1200w, /img/lesson_plans/uvc_0071-1050px.jpg 1050w, /img/lesson_plans/uvc_0071-900px.jpg 900w, /img/lesson_plans/uvc_0071-750px.jpg 750w, /img/lesson_plans/uvc_0071-600px.jpg 600w, /img/lesson_plans/uvc_0071-450px.jpg 450w, /img/lesson_plans/uvc_0071-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
-
 
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
@@ -84,7 +83,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Unknown. <em>Chintz (India), 18th Century</em>. Cotton, 17--, <a href="https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg">https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg</a>. Cooper Hewitt, Smithsonian Design Museum, Gift of Josephine Howell. Public domain.</p>
+					<p>Anonymous Indian Artist. <a aria-label="External Link" href="https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg">Chintz</a>. Cotton, [eighteenth century]. Cooper Hewitt, Smithsonian Design Museum, 18481761.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
