minor corr old site pages

--- a/html/assessments/exploring_archives.html
+++ b/html/assessments/exploring_archives.html
@@ -144,7 +144,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
           
-          <p><em><a aria-label="External Link"  href="https://digitalcollections.nypl.org/items/efeb0ba0-1851-0133-e8bf-58d385a7b928">Colored School – Object Teaching</a></em>. 1870. The New York Public Library Digital Collections, b11486940. “The New York Public Library believes that this item is in the public domain under the laws of the United States, but did not make a determination as to its copyright status under the copyright laws of other countries. This item may not be in the public domain under the laws of other countries.”
+          <p>Anonymous. <em><a aria-label="External Link"  href="https://digitalcollections.nypl.org/items/efeb0ba0-1851-0133-e8bf-58d385a7b928">Colored School – Object Teaching</a></em>. 1870. The New York Public Library Digital Collections, b11486940. “The New York Public Library believes that this item is in the public domain under the laws of the United States, but did not make a determination as to its copyright status under the copyright laws of other countries. This item may not be in the public domain under the laws of other countries.”
 					</p>
 					
 				</section>
