--- a/html/about/statement_on_using_generative_ai.html
+++ b/html/about/statement_on_using_generative_ai.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="editors">
 				<h2 id="editors">Statement on Using Generative AI</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_00xx-1800px.jpg" srcset="/img/about/uvc_00xx-1800px.jpg 1800w, /img/about/uvc_00xx-1650px.jpg 1650w, /img/about/uvc_00xx-1500px.jpg 1500w, /img/about/uvc_00xx-1350px.jpg 1350w, /img/about/uvc_00xx-1200px.jpg 1200w, /img/about/uvc_00xx-1050px.jpg 1050w, /img/about/uvc_00xx-900px.jpg 900w, /img/about/uvc_00xx-750px.jpg 750w, /img/about/uvc_00xx-600px.jpg 600w, /img/about/uvc_00xx-450px.jpg 450w, /img/about/uvc_00xx-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="."/>
+					<img src="/img/about/uvc_0072-1800px.jpg" srcset="/img/about/uvc_0072-1800px.jpg 1800w, /img/about/uvc_0072-1650px.jpg 1650w, /img/about/uvc_0072-1500px.jpg 1500w, /img/about/uvc_0072-1350px.jpg 1350w, /img/about/uvc_0072-1200px.jpg 1200w, /img/about/uvc_0072-1050px.jpg 1050w, /img/about/uvc_0072-900px.jpg 900w, /img/about/uvc_0072-750px.jpg 750w, /img/about/uvc_0072-600px.jpg 600w, /img/about/uvc_0072-450px.jpg 450w, /img/about/uvc_0072-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -115,7 +115,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p></p>
+					<p>Lovelace, Ada. &ldquo;<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Diagram_for_the_computation_of_Bernoulli_numbers.jpg">Diagram for the Computation by the Engine of the Numbers of Bernoulli</a>.&rdquo; 1842. <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
