--- a/html/about/statement_on_using_generative_ai.html
+++ b/html/about/statement_on_using_generative_ai.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="editors">
 				<h2 id="editors">Statement on Using Generative AI</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0072-1800px.jpg" srcset="/img/about/uvc_0072-1800px.jpg 1800w, /img/about/uvc_0072-1650px.jpg 1650w, /img/about/uvc_0072-1500px.jpg 1500w, /img/about/uvc_0072-1350px.jpg 1350w, /img/about/uvc_0072-1200px.jpg 1200w, /img/about/uvc_0072-1050px.jpg 1050w, /img/about/uvc_0072-900px.jpg 900w, /img/about/uvc_0072-750px.jpg 750w, /img/about/uvc_0072-600px.jpg 600w, /img/about/uvc_0072-450px.jpg 450w, /img/about/uvc_0072-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="."/>
+					<img style="object-position: 50% 21%;" src="/img/about/uvc_0072-1800px.jpg" srcset="/img/about/uvc_0072-1800px.jpg 1800w, /img/about/uvc_0072-1650px.jpg 1650w, /img/about/uvc_0072-1500px.jpg 1500w, /img/about/uvc_0072-1350px.jpg 1350w, /img/about/uvc_0072-1200px.jpg 1200w, /img/about/uvc_0072-1050px.jpg 1050w, /img/about/uvc_0072-900px.jpg 900w, /img/about/uvc_0072-750px.jpg 750w, /img/about/uvc_0072-600px.jpg 600w, /img/about/uvc_0072-450px.jpg 450w, /img/about/uvc_0072-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
