--- a/html/about/statement_on_using_generative_ai.html
+++ b/html/about/statement_on_using_generative_ai.html
@@ -123,7 +123,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Lovelace, Ada. &ldquo;<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Diagram_for_the_computation_of_Bernoulli_numbers.jpg">Diagram for the Computation by the Engine of the Numbers of Bernoulli</a>.&rdquo; 1842. <em>Wikimedia Commons</em> excerpt, colors inverted, significant magnification. Public domain. In this diagram and the accompanying note, Lovelace describes an algorithm for Charles Babbage’s Analytical Engine which, <a aria-label="External Link" href="https://en.wikipedia.org/wiki/Ada_Lovelace"><em>Wikipedia</em></a> indicates, “is considered to be the first published algorithm ever specifically tailored for implementation on a computer.”</p>
+					<p>Lovelace, Ada. &ldquo;<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Diagram_for_the_computation_of_Bernoulli_numbers.jpg">Diagram for the Computation by the Engine of the Numbers of Bernoulli</a>,&rdquo; excerpt, colors inverted, significant magnification. Print, 1842. <em>Wikimedia Commons</em>. Public domain. In this diagram and the accompanying note, Lovelace describes an algorithm for Charles Babbage’s Analytical Engine which, <a aria-label="External Link" href="https://en.wikipedia.org/wiki/Ada_Lovelace"><em>Wikipedia</em></a> indicates, “is considered to be the first published algorithm ever specifically tailored for implementation on a computer.”</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
