--- a/0_dev/0_page-dev/2_python-files/palestine-and-travel.html
+++ b/0_dev/0_page-dev/2_python-files/palestine-and-travel.html
@@ -47,15 +47,11 @@
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Mohammad Sakhnini, Sarah Copsey Alsader, Lenora Hanson <a class="mail" href="mailto:mosakhnini@gmail.com, sarahlcopsey@gmail.com, lh117@nyu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
-
-						<p><strong>Peer Reviewer:</strong> </p><!-- Change -->
+						<p><strong>Developers:</strong> Mohammad Sakhnini <a class="mail" href="mailto:mosakhnini@gmail.com"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Sarah Copsey Alsader <a class="mail" href="mailto:sarahlcopsey@gmail.com"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Lenora Hanson<a class="mail" href="mailto:lh117@nyu.edu"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a> </p> <!-- Change -->
 						
 						<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:ryan.fong@kzoo.ed?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<p><strong>Lesson Plan Guide:</strong>  Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
-
-						<p><strong>Copyeditor:</strong> </p><!-- Change -->
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p><!-- Change -->
 
