u palestine travels LP

--- a/html/lesson_plans/palestine-and-travel.html
+++ b/html/lesson_plans/palestine-and-travel.html
@@ -68,12 +68,12 @@
 						<li><a href="#structure">Central Learning Questions </a></li>
 						<li><a href="#materials">Suggested Materials and Accompanying Discussion Questions</a>
 							<ol>
-								<li><a href="materials-1">[Change to first title]</a></li>
-								<li><a href="materials-2">[Change to second title]</a></li>
-								<li><a href="materials-3">[Change to third title]</a></li>
+								<li><a href="materials-1">Primary Text Materials</a></li>
+								<li><a href="materials-2">Primary Visual Materials</a></li>
+								<li><a href="materials-3">Secondary Materials</a></li>
 							</ol>
 						</li>
-						<li><a href="#biography">Developer Biography</a></li>
+						<li><a href="#biography">Developer Biographies</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
 					</ol>
@@ -188,7 +188,7 @@
 						</section>
 
 						<section aria-labelledby="secondary-2">
-							<h5 id="secondary-2">Palestine and radical changes (political, religious and social) in British culture, art and literatures</h5>
+							<h5 id="secondary-2">Palestine and Radical Changes in British Culture, Art and Literatures</h5>
 								<ul>
 
 								</ul>		
