u add bio to palet travel

--- a/html/lesson_plans/palestine-and-travel.html
+++ b/html/lesson_plans/palestine-and-travel.html
@@ -307,6 +307,9 @@
     <p>Mohammad Sakhnini is a Senior Lecturer in the Department of English at Khalif University of Science and Technology, Abu Dhabi. He works in the fields of eighteenth-century British literature and culture and travel writing. His book, <em>British Encounters with Syrian-Mesopotamian Overland Routes to India: Rethinking Enlightenment Improvement</em> (1751-1795), has recently been published with Anthem Press (March 2023).</p>
 
     <p>Lenora Hanson is an Assistant Professor in the Department of English at New York University. Their research focuses on dispossession and enclosure beginning in the Romantic period and as it continues into the present, with particular attention to the way that rhetorical language registers the destruction of non-capitalist forms of life. They recently edited a special issue of <em>Studies in Romanticism</em> entitled "Palestine: Romanticisms Contemporary" and published <em>The Romantic Rhetoric of Accumulation</em> (Stanford University Press, 2022).</p>
+
+		<p>Sarah Copsey Alsader is completing her PhD at the University of Kent on Discourses of Islam in British Romantic Poetry. She has research interests across literature, philosophy, religion and psychology, subjects which are pulled together through questions about metaphysical structures of feeling. She is especially concerned with how such structures of feeling shape and interpellate individuals, are written into and elided in narrative, and construct the world in which we live.</p>
+
 </section>
 
 				<section class="small" aria-labelledby="caption">
