--- a/html/lesson_plans/palestine-and-travel.html
+++ b/html/lesson_plans/palestine-and-travel.html
@@ -315,7 +315,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Arbuckle Bros. <em><a href="https://digitalcollections.nypl.org/items/ba0694e0-c60d-012f-33ae-58d385a7bc34#/?uuid=98939823-fae4-dfe6-e040-e00a1806403f">Palestine</a></em>. 1889. NYPL Digital Collections, Lionel Pincus and Princess Firyal Map Division. Free to use without restriction.</p>
+					<p>Arbuckle Bros. <em><a aria-label="External Link" href="https://digitalcollections.nypl.org/items/ba0694e0-c60d-012f-33ae-58d385a7bc34#/?uuid=98939823-fae4-dfe6-e040-e00a1806403f">Palestine</a></em>. 1889. NYPL Digital Collections, Lionel Pincus and Princess Firyal Map Division. Free to use without restriction.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
