--- a/html/lesson_plans/palestine-and-travel.html
+++ b/html/lesson_plans/palestine-and-travel.html
@@ -320,7 +320,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Mohammad Sakhnini, Sarah Copsey Alsader, Lenora Hanson, dev. “Palestine in Nineteenth-Century British Travels and Travel Writings.” , collab peer revs.; Ryan D. Fong, les. plan clust. dev.;   Cherrie Kwok, les. plan guide;  , copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/palestine-and-travel.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/palestine-and-travel.html</a>.</p><!-- Change -->
+					<p>Mohammad Sakhnini, Sarah Copsey Alsader, Lenora Hanson, dev. “Palestine in Nineteenth-Century British Travels and Travel Writings.” , collab peer revs.; Ryan D. Fong, les. plan clust. dev.; Cherrie Kwok, les. plan guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/palestine-and-travel.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/palestine-and-travel.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
