--- a/html/lesson_plans/situating_pedagogy_1.html
+++ b/html/lesson_plans/situating_pedagogy_1.html
@@ -66,10 +66,9 @@
 					<ol class="menu">
 						<li><a href="#overview">Overview</a></li>
 						<li><a href="#teaching">Teaching Romanticism and Victorianismn</a></li>
-						<li><a href="#questions">Discussion Questions</a>
-						<li><a href="#workscited">Works Cited</a>
-						<li><a href="#recommended">Recommended Reading</a>
-						</li>
+						<li><a href="#questions">Discussion Questions</a></li>
+						<li><a href="#workscited">Works Cited</a></li>
+						<li><a href="#recommended">Recommended Reading</a></li>
 						<li><a href="#biography">Developer Biographies</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
@@ -273,7 +272,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Lenora Hanson, Sarah Copsey Alsader, Mohammad Sakhnini, dev. “Teaching Romanticism and Victorianism in Palestine.” , collab peer revs.; Ryan D. Fong, les. plan clust. dev.;  Cherrie Kwok, les. plan guide;  , copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/situating-pedagogy-1.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/situating-pedagogy-1.html</a>.</p><!-- Change -->
+					<p>Lenora Hanson, Sarah Copsey Alsader, Mohammad Sakhnini, dev. “Teaching Romanticism and Victorianism in Palestine.” Ryan D. Fong, les. plan clust. dev.;  Cherrie Kwok, les. plan guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/situating-pedagogy-1.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/situating-pedagogy-1.html</a>.</p>
 				</section>
 			</main>
 			
