u LP names and arab pen edits

--- a/html/lesson_plans/palestine_situating_pedagogy_1.html
+++ b/html/lesson_plans/palestine_situating_pedagogy_1.html
@@ -246,7 +246,7 @@
 
 						<p>Shehadeh, Raja. <em>Palestinian Walks: Forays into a Vanishing Landscape</em>. Scribner, 2007.</p>
 
-						<p>–. <em>A Rift in Time: Travels with My Ottoman Uncle</em>. OR Books, 2011.</p>
+						<p>---. <em>A Rift in Time: Travels with My Ottoman Uncle</em>. OR Books, 2011.</p>
 
 						<p>Spivak, Gayatri Chakravorty. “<a aria-label="External Link" href="https://journals.library.mun.ca/ojs/index.php/JU/article/view/2309">How the Heritage of Postcolonial Studies Thinks Colonialism Today</a>.” <em>Janus Unbound: Journal of Critical Studies</em>, vol. 1, no. 1, Fall 2021, pp. 19–29.</p>
 
