u pal and travel LP

--- a/html/lesson_plans/palestine_and_travel.html
+++ b/html/lesson_plans/palestine_and_travel.html
@@ -67,10 +67,11 @@
 			<section class="menu-container" aria-labelledby="menu">
 				<h3 id="menu">Menu</h3>
 				<ol class="menu">
+					
 						<li><a href="#overview">Overview</a></li>
-						<li><a href="#structure">Central Learning Questions</a></li>
+							<li><a href="#structure">Central Learning Questions</a></li>
 						<li>
-								<a href="#materials">Suggested Materials and Accompanying Discussion Questions</a>
+								<a href="#materials">Suggested Materials and Discussion Questions</a>
 								<ol>
 										<li><a href="#materials-1">Primary Text Materials</a></li>
 										<li><a href="#materials-2">Primary Visual Materials</a></li>
@@ -100,7 +101,7 @@
 	</section>	
 
 	<section aria-labelledby="structure">
-    <h3 id="structure">Central Learning Questions:</h3>
+    <h3 id="structure">Central Learning Questions</h3>
 	
 			<ol>
 					<li>How did the encounter with Palestinian locals allow European travelers to confirm or rethink some romantic associations in Europe which idealized the Holy Land?</li>
@@ -112,7 +113,7 @@
 	</section>
 
 	<section aria-labelledby="structure">
-    <h3 id="materials">Suggested Materials and Accompanying Discussion Questions</h3>
+    <h3 id="materials">Suggested Materials and Discussion Questions</h3>
 
     <p>Below are suggested primary texts and images that might help students analyze the dynamics of Palestinian landscapes and culture.</p>
 
@@ -318,7 +319,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Arbuckle Bros., <em><a aria-label="External Link" href="https://digitalcollections.nypl.org/items/ba0694e0-c60d-012f-33ae-58d385a7bc34#/?uuid=98939823-fae4-dfe6-e040-e00a1806403f">Palestine</a></em>. 1889. NYPL Digital Collections, Lionel Pincus and Princess Firyal Map Division. Free to use without restriction.</p>
+					<p>Arbuckle Bros., <em><a aria-label="External Link" href="https://digitalcollections.nypl.org/items/ba0694e0-c60d-012f-33ae-58d385a7bc34#/?uuid=98939823-fae4-dfe6-e040-e00a1806403f">Palestine</a></em>. 1889. New York Public Library Digital Collections, Lionel Pincus and Princess Firyal Map Division. Free to use without restriction.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
