u LP pal arab pen

--- a/html/lesson_plans/palestine_arabian_penninsula.html
+++ b/html/lesson_plans/palestine_arabian_penninsula.html
@@ -66,7 +66,7 @@
 					<ol class="menu">
 						<li><a href="#overview">Overview</a></li>
 						<li><a href="#structure">Structure and Organisation</a></li>
-						<li><a href="#materials">Suggested Materials, Topics, and Questions</a>
+						<li><a href="#materials">Suggested Materials, Topics, and Discussion Questions</a>
 							<ol>
 								<li><a href="#materials-1">Romantic Poetry and the Construction of Arabia</a></li>
 								<li><a href="#materials-2">Nineteenth-Century Discourses on “the Bedouin”</a></li>
