u LP add email subject lines

--- a/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
@@ -47,7 +47,7 @@
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developers:</strong> Mohammad Sakhnini <a class="mail" href="mailto:mosakhnini@gmail.com"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Sarah Copsey Alsader <a class="mail" href="mailto:sarahlcopsey@gmail.com"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Lenora Hanson <a class="mail" href="mailto:lh117@nyu.edu"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Developers:</strong> Mohammad Sakhnini <a class="mail" href="mailto:mosakhnini@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Sarah Copsey Alsader <a class="mail" href="mailto:sarahlcopsey@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Lenora Hanson <a class="mail" href="mailto:lh117@nyu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:ryan.fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
