--- a/html/lesson_plans/palestine_and_travel.html
+++ b/html/lesson_plans/palestine_and_travel.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Palestine in Victorian Travels and Travel Writings | Undisciplining the Victorian Classroom</title>
-</head>
 
 		<meta name="description" content="Discusses the ambivalent nature of encounters between British travelers and Palestinian communities and landscapes in the Nineteenth Century."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -74,7 +73,7 @@
 								<a href="#materials">Suggested Materials and Discussion Questions</a>
 								<ol>
 										<li><a href="#materials-1">Primary Text Materials</a></li>
-										<li><a href="#materials-2">Primary Visual Materials</a></li>
+										<li><a href="#materials-2">Primary Visual Materials: Orientalism and Romanticism</a></li>
 										<li><a href="#materials-3">Secondary Materials</a></li>
 								</ol>
 						</li>
